# VulkanDashV2

./: .gitignore  CMakeLists.txt  mod.json
resources/shaders/: batchnode.vs.sc  particle.vs.sc  sprite.fs.sc  sprite.vs.sc  varying.def.sc
resources/shaders/helpers/: build-shader.bat  build-shaders.sh
src/Hooks/: AppDelegate.cpp  CCDirector.cpp  CCEGLView.cpp  CCEGLViewProtocol.cpp  CCSprite.cpp  CCTexture2D.cpp  CCTexture2D.hpp
src/Hooks/Nodes/: CCCircleWave.cpp  CCDrawNode.cpp  CCLayerColor.cpp  CCMotionStreak.cpp  CCParticleSystem.cpp  CCParticleSystemQuad.cpp  CCParticleSystemQuad.hpp  CCSprite.cpp  CCSpriteBatchNode.cpp  CCSpriteBatchNode.cpp.txt  CCSpriteBatchNode.hpp  CCSpriteBatchNode.hpp.txt  CCTextureAtlas.cpp
src/Utils/: BGFX.cpp  BGFX.hpp  ShaderCache.cpp  ShaderCache.hpp  VertexLayoutManager.cpp  VertexLayoutManager.hpp  macOS.hpp  macOS.mm
